# from_tuple

./: Cargo.toml  README.md
.github/workflows/: continuous_integration.yml
src/: lib.rs  strictly_heterogeneous.rs
