[package]
name = "from_tuple"
version = "0.1.1"
authors = ["chip <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
description = "Derive structs from tuples."
documentation = "https://docs.rs/from_tuple"
homepage = "https://docs.rs/from_tuple"
repository = "https://github.com/chippers/from_tuple"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0.2"
syn = { version = "1", features = ["extra-traits"] }