[package]
name = "from_tuple"
version = "1.0.0"
authors = ["chip <chip@chip.sh>"]
license = "Apache-2.0 OR MIT"
description = "Derive structs from tuples."
documentation = "https://docs.rs/from_tuple"
homepage = "https://docs.rs/from_tuple"
repository = "https://github.com/chippers/from_tuple"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.2" }


[features]
default = ["strictly_heterogeneous", "order_dependent"]
strictly_heterogeneous = ["syn/extra-traits"]
order_dependent = ["syn/full", "syn/printing"]